--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>MikeyH</groupId>
     <artifactId>moviedb</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <jackson.version>2.9.0</jackson.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>commons-httpclient</groupId>
@@ -28,6 +31,11 @@
             <groupId>io.rest-assured</groupId>
             <artifactId>json-path</artifactId>
             <version>3.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 
