--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>MikeyH</groupId>
     <artifactId>moviedb</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <properties>
         <jackson.version>2.9.0</jackson.version>
     </properties>
