--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,16 @@
             <version>3.0.6</version>
         </dependency>
         <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>2.0.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
+            <version>2.6.5</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
